@@ -44,7 +44,7 @@
    "provides" : {
       "CGI::Mungo" : {
          "file" : "lib/CGI/Mungo.pm",
-         "version" : "1.8"
+         "version" : "1.801"
       },
       "CGI::Mungo::Base" : {
          "file" : "lib/CGI/Mungo/Base.pm"
@@ -83,5 +83,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "1.8"
+   "version" : "1.801"
 }
