@@ -19,7 +19,7 @@ name: CGI-Mungo
 provides:
   CGI::Mungo:
     file: lib/CGI/Mungo.pm
-    version: 1.8
+    version: 1.801
   CGI::Mungo::Base:
     file: lib/CGI/Mungo/Base.pm
   CGI::Mungo::Log:
@@ -52,4 +52,4 @@ requires:
   Template: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.8
+version: 1.801
