@@ -1,3 +1,7 @@
+Mungo 1.801 -- 08/12/2013
+
+	Fixed tests.
+
 Mungo 1.8 -- 05/12/2013
 
 	Updated POD.
